[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kloakd-sdk"
version = "0.1.0"
description = "The official Python SDK for the KLOAKD API"
readme = "README.md"
license = "MIT"
authors = ["KLOAKD <sdk@kloakd.dev>"]
keywords = ["kloakd", "web-scraping", "api", "sdk", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{ include = "kloakd" }]

[tool.poetry.urls]
Homepage = "https://kloakd.dev"
Documentation = "https://docs.kloakd.dev/sdk/python"
Repository = "https://github.com/kloakd/kloakd-sdk-python"
Changelog = "https://github.com/kloakd/kloakd-sdk-python/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = ">=0.27"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.23"
pytest-cov = ">=5.0"
ruff = ">=0.4"
mypy = ">=1.10"
respx = ">=0.21"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=kloakd --cov-report=term-missing --cov-fail-under=75"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
